[gd_scene format=3 uid="uid://chsa7sqergkst"]

[ext_resource type="Script" uid="uid://bkpc7ioyvbms0" path="res://Scripts/fakePlayerItem.gd" id="1_gvqrq"]
[ext_resource type="FontFile" uid="uid://dige8501rbskh" path="res://fonts/Bion-Bold.otf" id="3_uwk1o"]
[ext_resource type="Texture2D" uid="uid://dc7neaswhddjw" path="res://img/Button.png" id="6_xauu8"]

[node name="presenceItem" type="HBoxContainer" unique_id=245079504]
custom_minimum_size = Vector2(100, 30)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 370.0
offset_bottom = 15.5
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_gvqrq")

[node name="pTeam" type="TextureButton" parent="." unique_id=173641249]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
keep_pressed_outside = true
texture_normal = ExtResource("6_xauu8")
ignore_texture_size = true
stretch_mode = 0

[node name="B_team" type="Label" parent="pTeam" unique_id=62715573]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_uwk1o")
theme_override_font_sizes/font_size = 20
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pName" type="LineEdit" parent="." unique_id=232579295]
clip_contents = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "name—Ñ3"

[node name="pCiv" type="Label" parent="." unique_id=1290645854]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.288518, 0.288518, 0.288518, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 20
text = "Random"
vertical_alignment = 1

[connection signal="gui_input" from="pTeam/B_team" to="pTeam/B_team" method="_on_change_team"]
[connection signal="gui_input" from="pName" to="pName" method="_on_gui_input"]
[connection signal="mouse_entered" from="pName" to="pName" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="pName" to="pName" method="_on_mouse_exited"]
